kubernetes/kacheri/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kacheri
  namespace: kacheri

spec:
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: ws
      port: 8080
      targetPort: ws

  selector:
    app: kacheri
